# intelligent-health-monitor

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  test_system.py
adapters/hvac/: domain.py
core/: __init__.py  config.py
core/domain/: models.py
core/services/: __init__.py  ai_analysis.py  database_metrics.py  generic_hvac_agents.py  integrated_monitoring.py  metrics_collector.py
tests/: ai_validation_framework.py
tests/unit/core/: test_ai_analysis.py  test_config.py  test_database_metrics.py  test_metrics_system.py
